openshift/hello-openshift/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: idm-issuer
  name: hello-openshift
spec:
  ingressClassName: openshift-default
  rules:
  - host: hello-openshift-dev.apps.bsduk5x4.northeurope.aroapp.io
    http:
      paths:
      - backend:
          service:
            name: hello-openshift
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - hello-openshift-dev.apps.bsduk5x4.northeurope.aroapp.io
    secretName: ingress-hello-openshift-dev
